
0.2.0b (quick fix2 release)

    * FIX: workaround to enable password for users with password set (BusyBox 'passwd' command haven't done it while changing password) - passwords are enabled at next boot

0.3.0 (WORK IN PROGRESS)

    * FIX: Updated BusyBox binary with 'passwd' patch
    * FIX: NVRAM dump on US models
    * ADD: Changelog file to SVN
    * ADD: update time at boot using NTP servers pool
    * ADD: create /mnt/user/www dir if it does not exist
    * ADD: autoupgrade from USB storage device from /mnt/usb1/Drive1/OpenLGTV_BCM/upgrade/ dir at boot
    * ADD: automatic backup to USB storage device if /mnt/usb1/Drive1/OpenLGTV_BCM/make_backup file exists
    * ADD: executing scripts from USB storage device from /mnt/usb1/Drive1/OpenLGTV_BCM/autorun/ dir at boot
    * ADD: auto mount-binding /mnt/user/modules/wl.ko to /mnt/lg/res/lgres/wl.ko, so if you have new/modified driver for wireless card you can just put in /mnt/user/modules/ and it will be used at start
    * ADD: erase lginit partitions at boot if not erased
    * ADD: support for Yahoo Widgets (both Engine and Data) mounting from /mnt/usb1/Drive1/OpenLGTV_BCM/{ywe,ywedata}
    * ADD: support for Yahoo Widgets Data used as ramdisk (set to max 80MB) if ywedata partition is not available in both NAND flash or USB storage device
    * ADD: support for Samsung Yahoo Widgets
    * ADD: RELEASE is started now in tmux, so it's possible to control RELEASE over telnet or SSH, too
    * ADD: /mnt/user/cfg/settings file with configuration variables for OpenLGTV BCM scripts
    * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
    * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install,
    * CHANGE: move backup, flashed file and logs to 'flashed' subdir after successful flash
    * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation