@@ -125,6 +125,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: support for Samsung Yahoo Widgets
     * ADD: RELEASE is started now in tmux, so it's possible to control RELEASE over telnet or SSH, too
     * ADD: /mnt/user/cfg/settings file with configuration variables for OpenLGTV BCM scripts
+    * ADD: possibility to enable all available NetCast services
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
     * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install,
     * CHANGE: move backup, flashed file and logs to 'flashed' subdir after successful flash
